--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -9,7 +9,7 @@
     transform: translateX(-100%);
     opacity: 0;
     transition: all .5s ease;
-    background: #fff;
+    background: rgb(255, 255, 255);
 
     @media only screen and (max-width: $bp-small-1){
         width: 100%;
